<resources>
    <string name="app_name">Moja Kancelaria</string>
    <string name="about_app_title">Autorzy</string>
    <string name="about_app_description"><![CDATA[<b>Wiktoria Salamon</b><br />wiktoria.julia.salamon@gmail.com<br /><br /><b>Maciej Lewandowicz</b><br />maciek.lewandowicz@gmail.com]]></string>
    <!-- Login Activity -->
    <string name="password_code_hint">Pin</string>
    <string name="login_button">Start</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="login_successful_toast">Logowanie…</string>
    <string name="login_failed_toast">Zły pin…</string>
    <string name="new_password_code_hint">Podaj nowy pin:</string>
    <string name="security_question_hint">Podaj swój ulubiony kraj:</string>
    <string name="weak_pin_toast">Za prosty PIN!\npodaj minimum 5 znaków!</string>
    <!-- Alert Dialog -->
    <string name="warning">Uwaga!</string>
    <string name="are_you_sure">Na pewno?</string>
    <!-- Add/Update Client Fragment -->
    <string name="update_client_title">Edycja nazwy klienta</string>
    <string name="update_client_hint">Podaj nową nazwę klienta</string>
    <string name="new_client_hint">Nazwa nowego klienta</string>
    <string name="empty_client_warning">Nazwa klienta nie może być pusta!</string>
    <string name="too_long_client_warning">Za długa nazwa klienta!</string>
    <string name="add_multiplicated_client"><![CDATA[Klient <b>%1$s<</b> już istnieje w aplikacji. Czy na pewno chcesz utworzyć nowego klienta o tej samej nazwie?]]> </string>

    <!-- Client Fragment -->
    <string name="delete_client"><![CDATA[Czy na pewno chcesz usunąć klienta <b>%1$s<</b> oraz wszystkie jego dane?]]> </string>
    <string name="archive_client"><![CDATA[Czy na pewno chcesz przenieść klienta <b>%1$s<</b> oraz wszystkie jego dane do archiwum? Nie da się cofnąć tej operacji!]]> </string>

    <string name="deleting_client">Usuwanie klienta</string>
    <string name="search">Szukaj</string>

    <!-- Letters Fragment -->
    <string name="delete_letter"><![CDATA[Czy na pewno chcesz usunąć list <b>%1$s<</b>?]]> </string>



    <!-- Archiving case -->
    <string name="archive_not_payed"><![CDATA[Sprawa <b>%1$s<</b> ma nieopłacone należności na łączną kwotę <b>%2$s<</b>. Czy chcesz przenieść tę sprawę do archiwum? \nNie da się cofnąć tej operacji!]]></string>
    <string name="archive_payed"><![CDATA[Czy chcesz przenieść sprawę <b>%1$s</b> do archiwum? Nie da się cofnąć tej operacji!]]></string>

    <!-- CASES -->
    <string name="delete_client_case"><![CDATA[Czy na pewno chcesz usunąć sprawę <b>%1$s<</b> klienta <b>%2$s<</b> oraz wszystkie dane sprawy?]]></string>
    <string name="deleting_case">Usuwanie sprawy</string>
    <string name="empty_case_warning">Nazwa sprawy nie może być pusta!</string>
    <string name="new_case_hint">Nazwa nowej sprawy</string>
    <string name="cases">Sprawy</string>

    <!-- Obligations -->
    <string name="obligations">Zobowiązania</string>
    <string name="contract">Umowa</string>
    <string name="stamps">Znaczki</string>
    <string name="stamps_long">Znaczki pocztowe</string>
    <string name="hearing">Rozprawa</string>
    <string name="court_short">Op. sąd.</string>
    <string name="court">Opłaty sądowe</string>
    <string name="amount_with_currency">%1$s zł</string>
    <string name="plus_amount_with_currency">+ %1$s zł</string>
    <string name="wrong_data">Błędne dane!</string>
    <string name="wrong_amount">Błędna kwota!</string>
    <string name="over_payed">Kwota nie może być mniejsza niż kwota opłacona!</string>
    <string name="spinner_prompt">Typ zobowiązania:</string>
    <string name="spinner_error">Wybierz rodzaj zobowiązania!</string>
    <string name="not_provided_data">Podaj dane!</string>
    <string name="date_not_provided">Podaj datę płatności!</string>
    <string name="cannot_add_obligation_when_nothing_to_spend">Zobowiązania pokrywają całą wpłate!</string>
    <string name="sum_of_amounts_to_pay_label">Pozostało do zapłaty: %1$s zł</string>

    <!-- Obligation details -->
    <string name="delete_obligation"><![CDATA[Czy na pewno chcesz usunąć zobowiązanie <b>%1$s<</b>? Informacje o wpłatach na te zobowiązanie zostaną utracone!]]></string>
    <string name="deleting_obligation">Usuwanie zobowiązania</string>
    <string name="name">Nazwa</string>
    <string name="type">Typ</string>
    <string name="amount">Kwota do opłacenia</string>
    <string name="payed_amount">Kwota opłacona</string>
    <string name="creation_date">Data dodania</string>
    <string name="payment_deadline">Termin płatności</string>

    <!-- Payments -->
    <string name="payments">Wpłaty</string>
    <string name="payment_amount">Kwota</string>
    <string name="new_payment">Nowa wpłata</string>
    <string name="payed_obligations">Opłacone zobowiązania:</string>
    <string name="add">Dodaj</string>
    <string name="payment_date">Data wpłaty</string>
    <string name="name_not_provided">Podaj nazwę!</string>
    <string name="name_too_long">Za długa nazwa!</string>
    <string name="adding_obligation_to_payment_label">Wybierz zobowiązanie do opłacenia</string>
    <string name="payed_amount_with_currency">%1$s/%2$s zł</string>
    <string name="left_to_be_spend">Pozostało do wydania %1$s zł</string>
    <string name="amount_to_pay_label"><![CDATA[Podaj kwotę do opłacenia zobowiązania <b>%1$s<</b> (%2$s/%3$s zł):]]> </string>
    <string name="cannot_add_obligation_without_amount">Nie można dodać zobowiązania, jeśli kwota wpłaty jest pusta!</string>
    <string name="cannot_edit_amount">Aby zmienić kwotę wpłaty, usuń wszystkie opłacone zobowiązania.</string>
    <string name="are_you_sure_delete_payed_obligation">Czy na pewno chcesz usunać wpłatę %1$s na zobowiązanie %2$s?</string>
    <string name="payed">Opłacono:</string>
    <string name="too_large_amount">Za duża kwota!</string>
    <string name="amount_bigger_than_left">Nie można przeznaczyć kwoty większej niż pozostała!</string>
    <string name="money_left">Nie pokryto całej kwoty wpłaty!</string>
    <string name="deleting_payment">Usuwanie płatności</string>
    <string name="delete_payment"><![CDATA[Czy na pewno chcesz usunąć płatność <b>%1$s<</b>? Cofnie to wpłacone kwoty na poczet wszystkich zobowiązań!]]></string>
    <string name="case_and_type">%1$s (%2$s)</string>

    <!-- Buttons -->
    <string name="delete">Usuń</string>
    <string name="move">Przenieś</string>

    <string name="cancel">Anuluj</string>
    <string name="ok">Zatwierdź</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="save">Zapisz</string>
    <string name="edit">Edytuj</string>
    <string name="empty_amount_payed">0/0 zł</string>

    <!-- Archives -->
    <string name="archives">Archiwum</string>
    <string name="client_archives">Archiwum - %1$s</string>

    <!-- Backup -->
    <string name="provide_backup">Podaj nazwę pliku do backupu:</string>
    <string name="select_backup_file">Wybierz plik zapisanej bazy danych</string>
    <string name="backup_info">Backup umożliwia zapisanie aktualnego stanu bazy danych. Pozwala to przykładowo przywrócić usunięte dane, bądź przenieśc je na inne urządzenie.</string>
    <string name="backup_button">Backup Bazy</string>
    <string name="restore_button">Przywracanie</string>
    <string name="manage_backup">Usuń backup</string>
    <string name="archive_button">Archiwizuj</string>
    <string name="report_button">Raport</string>
    <string name="clients">Klienci</string>
    <string name="archive">Archiwum</string>
    <string name="tools">Narzedzia</string>
    <string name="navigation">Nawigacja</string>
    <string name="backup">Backup</string>
    <string name="settings">Ustawienia</string>
    <string name="post">Korespondencja</string>
    <string name="sent">Wysłane</string>
    <string name="awizo">Awiza</string>
    <string name="new_letter">Nowa przesyłka</string>
    <string name="info">Info</string>
    <string name="exit">Wyjście</string>
    <string name="email_for_reports">Email do wysyłania raportów:</string>
    <string name="auto_backup">Automatyczny backup po dniach:</string>
    <string name="delete_backups">Usuwanie auto-backupów starszych niż dni:</string>


    <!-- Letters -->
    <string name="letter_number">Podaj numer przesyłki</string>
    <string name="outgoing_letter">Przesyłka wychodząca</string>
    <string name="empty_letter_num">Pusty number przesyłki!</string>
    <string name="added_letter">Dodano przesyłkę!</string>
    <string name="loading_data">Ładowanie danych z serwera...</string>
    <string name="connection_error">Błąd łączenia z serwerem\nSprawdź połączenie internetowe...</string>
    <string name="download_error">Błąd podczas pobierania danych...</string>
    <string name="loaded">Załadowano dane!</string>


    <!-- TODO -->
    <string name="todo">W planach...</string>
</resources>