<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView
        style="@style/obligations_title_style"
        android:layout_margin="20dp"
        android:text="@string/update_client_title">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            style="@style/input_style"
            android:id="@+id/update_client_edit_text"
            android:hint="@string/update_client_hint"
            android:textIsSelectable="false"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"
            android:layout_marginBottom="40dp" />

        <Button
            android:id="@+id/save_update_client_button"
            android:text="@string/save"
            style="@style/button_style">
        </Button>

    </LinearLayout>



</LinearLayout>